# poc-agent-Mimir

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  dashboard.py  main.py  schemas.py
app/agents/: base.py  catalog.py  hulk.py  mimir.py  prompts.py  registry.py  specialist.py
app/line/: __init__.py  client.py  webhook.py
app/llm/: groq_client.py
app/media/: __init__.py  models.py  storage.py
app/memory/: __init__.py  user_state_store.py  workout_store.py
app/planning/: __init__.py  plan_store.py  workout_plan.py
app/tools/: __init__.py  hulk_tools.py  models.py  web_search.py  workout_parser.py
app/vision/: __init__.py  analyzer.py  gemini_client.py  prompts.py
docs/: cloud-run-deployment.md  hulk-roadmap.md  mimir-hulk-line-fastapi-plan.md
scripts/: deploy-cloud-run.sh
tests/: test_api.py  test_hulk.py  test_line_webhook.py  test_media_storage.py  test_mimir.py  test_user_state_store.py  test_vision.py  test_workout_plan.py  test_workout_store.py
